--- a/biller-mobile-app/src/app/features/dashboard/products/products.component.scss
+++ b/biller-mobile-app/src/app/features/dashboard/products/products.component.scss
@@ -41,6 +41,15 @@
   }
 
   .filter-btn {
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    mat-icon {
+      margin: 0;
+    }
+    
     &.active {
       color: v.$light-primary;
 
@@ -369,11 +378,16 @@
       .action-btn {
         width: 32px;
         height: 32px;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
         mat-icon {
           font-size: 18px;
           width: 18px;
           height: 18px;
+          margin: 0;
         }
 
         &.delete {
